🚀 Added ScrollCount component for displaying Featured Events. 📊 Implemented ScrollCount for tracking Happy Clients. 🌟 Updated CountUp with Good Comments display functionality. 🏆 Integrated ScrollCount to showcase Trophies Won. 🔄 Refactored code structure in CountUp component. 🔍 Implemented SearchBar component for enhanced user experience. 🖼️ Improved styling for the blog table to enhance readability. 🔧 Fixed minor bug in the handling of the Add modal. 🛠️ Enhanced loading state logic for a smoother user interface. 🔄 Updated modal styling for a more cohesive design.

--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -54,3 +54,11 @@ button.swal2-cancel.btn.btn-danger {
 .css-1deqn4c {
   background: transparent !important;
 }
+
+
+.table-bg{
+    background-color: #111827 !important;
+}
+.serach-btn{
+  background-color: #e99400 !important;
+}
